modernize(java25): Collectors.toList/toSet -> Stream.toList / toUnmodifiableSet (wave 6)
~50 sites across 46 files (mostly wired conditions/effects/triggers/selectors,
plus CatalogManager, Game, GuildManager, Habbo, RoomUnit, RoomUnitManager,
TraxManager). `.collect(Collectors.toList())` -> `.toList()`; the three
`Collectors.toSet()` sites -> `Collectors.toUnmodifiableSet()`. Unused
`import java.util.stream.Collectors` removed where it became dead.

SAFETY: `toList()` / `toUnmodifiableSet()` are UNMODIFIABLE, so a wrong site
would throw UnsupportedOperationException at runtime — invisible to the compiler
and only weakly covered by the unit tests. Applied via a two-stage adversarial
workflow: stage 1 converted only sites it could prove read-only; stage 2, an
independent skeptic per file, traced every converted result through its method,
into every constructor/method it is passed to (JsonData/Gson serialization,
WiredHighscoreDataEntry, composers), and -- for results returned from their
method -- through ALL callers (grep-verified). Zero unsafe sites found; sites
that escape to unverifiable boundaries were skipped in stage 1.

Reviewed: every added line is a toList/toUnmodifiableSet/import change (no
oversteps), net -38 lines. mvn test (JDK 25) -> 406 tests, 0 failures.