@@ -19,7 +19,6 @@ import java.math.RoundingMode;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class WiredConditionHasAltitude extends InteractionWiredCondition {
     private static final int COMPARISON_LESS = 0;
@@ -80,7 +79,7 @@ public class WiredConditionHasAltitude extends InteractionWiredCondition {
                 this.formatAltitude(this.altitude),
                 this.furniSource,
                 this.quantifier,
-                this.items.stream().map(HabboItem::getId).collect(Collectors.toList())
+                this.items.stream().map(HabboItem::getId).toList()
         ));
     }
 
