@@ -22,7 +22,6 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public class WiredEffectMoveFurniAway extends InteractionWiredEffect {
@@ -166,7 +165,7 @@ public class WiredEffectMoveFurniAway extends InteractionWiredEffect {
         List<HabboItem> itemsSnapshot = new ArrayList<>(this.items);
         return WiredManager.getGson().toJson(new JsonData(
                 this.getDelay(),
-                itemsSnapshot.stream().map(HabboItem::getId).collect(Collectors.toList()),
+                itemsSnapshot.stream().map(HabboItem::getId).toList(),
                 this.furniSource
         ));
     }
