@@ -24,7 +24,6 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Wired effect: move to closest user
@@ -317,7 +316,7 @@ public class WiredEffectMoveFurniTowards extends InteractionWiredEffect {
         List<HabboItem> itemsSnapshot = new ArrayList<>(this.items);
         return WiredManager.getGson().toJson(new JsonData(
                 this.getDelay(),
-                itemsSnapshot.stream().map(HabboItem::getId).collect(Collectors.toList()),
+                itemsSnapshot.stream().map(HabboItem::getId).toList(),
                 this.furniSource
         ));
     }
