@@ -29,7 +29,6 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class WiredEffectTeleport extends InteractionWiredEffect {
     public static final WiredEffectType type = WiredEffectType.TELEPORT;
@@ -257,7 +256,7 @@ public class WiredEffectTeleport extends InteractionWiredEffect {
         List<HabboItem> itemsSnapshot = new ArrayList<>(this.items);
         return WiredManager.getGson().toJson(new JsonData(
             this.getDelay(),
-            itemsSnapshot.stream().map(HabboItem::getId).collect(Collectors.toList()),
+            itemsSnapshot.stream().map(HabboItem::getId).toList(),
             this.fastTeleport,
             this.furniSource,
             this.userSource
