@@ -26,7 +26,6 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public abstract class WiredEffectUserFurniBase extends InteractionWiredEffect {
     protected final List<HabboItem> items = new ArrayList<>();
@@ -160,7 +159,7 @@ public abstract class WiredEffectUserFurniBase extends InteractionWiredEffect {
     public String getWiredData() {
         return WiredManager.getGson().toJson(new JsonData(
                 this.getDelay(),
-                this.items.stream().map(HabboItem::getId).collect(Collectors.toList()),
+                this.items.stream().map(HabboItem::getId).toList(),
                 this.furniSource,
                 this.userSource
         ));
