@@ -19,7 +19,6 @@ import gnu.trove.set.hash.THashSet;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class WiredTriggerHabboWalkOnFurni extends InteractionWiredTrigger {
     public static final WiredTriggerType type = WiredTriggerType.WALKS_ON_FURNI;
@@ -128,7 +127,7 @@ public class WiredTriggerHabboWalkOnFurni extends InteractionWiredTrigger {
     public String getWiredData() {
         return WiredManager.getGson().toJson(new JsonData(
             this.furniSource,
-            this.items.stream().map(HabboItem::getId).collect(Collectors.toList())
+            this.items.stream().map(HabboItem::getId).toList()
         ));
     }
 
